force-app/main/default/objects/Case_Dispatch__c/Case_Dispatch__c.object-meta.xml
<CustomObject>
    <label>Case Dispatch</label>
    <pluralLabel>Case Dispatches</pluralLabel>
    <nameField>
        <label>Case Dispatch Name</label>
        <type>AutoNumber</type>
        <displayFormat>CD-{0000}</displayFormat>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>