force-app/main/default/objects/Case_Dispatch__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Dispatches</relationshipLabel>
    <relationshipName>Case_Dispatches</relationshipName>
    <type>Lookup</type>
</CustomField>