force-app/main/default/objects/Case_Dispatch__c/fields/External_Resource_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Resource_Id__c</fullName>
    <label>External Resource ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>