force-app/main/default/objects/Case_Dispatch__c/fields/Vendor_Response_Code__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Response_Code__c</fullName>
    <label>Vendor Response Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>